# AdventOfCode2023

./: README.md  day1.ipynb  day10.ipynb  day11.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb  pyproject.toml  testing.ipynb
2022/: day1_2022.ipynb  day2_2022.ipynb
