[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Cody Crawmer <codercodyc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
pandas = "^2.1.3"
polars = "^0.19.19"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
